# rust-template

./: .gitignore  Cargo.toml  README.md  deny.toml  dprint.json  rust-toolchain.toml
crates/hello-world/: Cargo.toml
hello-world/: Cargo.toml
hello-world/src/: main.rs
scripts/: check.sh
