[workspace.package]
authors = ["Lohann Paterno Coutinho Ferreira <developer@lohann.dev>"]
edition = "2021"
repository = "https://github.com/curso-polkadot-sdk/rust-template.git"

[workspace]
members = ["hello-world"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false
debug-assertions = false
incremental = false
