[workspace.package]
authors = ["Lohann Paterno Coutinho Ferreira <developer@lohann.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/curso-polkadot-sdk/rust-template.git"

[workspace]
members = ["crates/hello-world"]
default-members = ["crates/hello-world"]
resolver = "2"

[workspace.dependencies]
# members
hello-world = { path = "./crates/hello-world" }

# third-party
camino = { version = "1.2.2", default-features = false }
cargo_metadata = { version = "0.23.1" }
clap = { version = "4.6.1" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149" }

# [profile.release]
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# panic = "abort"
# strip = "symbols"
# debug = false
# overflow-checks = false
# debug-assertions = false
# incremental = false
